# vocode-python

./: Dockerfile  Makefile
apps/client_backend/: Dockerfile  main.py  pyproject.toml
apps/client_backend/vocode/: __init__.py
apps/client_backend/vocode/streaming/: constants.py  streaming_conversation.py
apps/client_backend/vocode/streaming/agent/: chat_gpt_agent.py
apps/client_backend/vocode/streaming/client_backend/: conversation.py
apps/client_backend/vocode/streaming/models/: agent.py  synthesizer.py  websocket.py
apps/client_backend/vocode/streaming/synthesizer/: eleven_labs_synthesizer.py  rime_synthesizer.py
apps/client_backend/vocode/streaming/utils/: goodbye_model.py
apps/client_backend/vocode/utils/transcripts/: call_transcript_utils.py
